--- a/apps/ecommerce/src/app/cart/cart.component.html
+++ b/apps/ecommerce/src/app/cart/cart.component.html
@@ -1,33 +1,3 @@
 <div class="main-div">
-    <div fxLayout="row wrap" fxLayoutGap="5px grid">
-        <mat-card class="mat-card" *ngFor="let info of data | async" fxFlex="45%" fxFlex.xs="100%" fxFlex.sm="33%"
-            class="mat-elevation-z4">
-            <div class="cardHeader">
-                <div class="titleHeader">
-                    <mat-card-title>
-                        {{info.volumeInfo.title}}
-                    </mat-card-title>
-                    <mat-card-subtitle>
-                        {{info.volumeInfo.subtitle}}
-                    </mat-card-subtitle>
-                </div>
-                <img mat-card-image src={{info.volumeInfo.imageLinks.thumbnail}} alt="">
-            </div>
-            <mat-card-content class="mat-card-content">
-                <p>
-                    {{info.volumeInfo.description}}<br>
-                </p>
-            </mat-card-content>
-            <div class="footer">
-                <div class="footerLeft">
-                    <b>Written By:</b><br>
-                    {{info.volumeInfo.authors.join(", ")}}
-                </div>
-                <mat-icon color="accent" (click)="removeFromCart(info)">remove_shopping_cart</mat-icon>
-            </div>
-        </mat-card>
-    </div>
-    <div class="buyButton">
-        <button (click)="buy()" *ngIf="(data  | async).length > 0" mat-raised-button color="accent">Proceed to purchase</button>
-    </div>
+    <commonCard [data]="data" [search]="false"></commonCard>
 </div>
