--- a/apps/ecommerce/src/app/search/search.component.html
+++ b/apps/ecommerce/src/app/search/search.component.html
@@ -9,29 +9,5 @@
         <mat-icon (click)="onSearchClick(myform)">search</mat-icon>
         <mat-spinner *ngIf="isLoading"></mat-spinner>
     </div>
-    <div fxLayout="row wrap" fxLayoutGap="5px grid">
-        <mat-card (click)="onCardClick(info)" class="mat-card" *ngFor="let info of data | async" fxFlex="45%"
-            fxFlex.xs="100%" fxFlex.sm="33%" class="mat-elevation-z4">
-            <div class="cardHeader">
-                <div class="titleHeader">
-                    <mat-card-title>
-                        {{info.volumeInfo.title}}
-                    </mat-card-title>
-                    <mat-card-subtitle>
-                        {{info.volumeInfo.subtitle}}
-                    </mat-card-subtitle>
-                </div>
-                <img mat-card-image src={{info.volumeInfo.imageLinks.thumbnail}} alt="">
-            </div>
-            <mat-card-content class="mat-card-content">
-                <p>
-                    {{info.volumeInfo.description}}
-                </p>
-            </mat-card-content>
-            <div class="footer">
-                <b>Written By:</b><br>
-                {{info.volumeInfo.authors.join(", ")}}
-            </div>
-        </mat-card>
-    </div>
+    <commonCard [data]="data" [error]="error" [search]="true"></commonCard>
 </div>
