--- a/apps/ecommerce/src/app/billing-info/billing-info.component.html
+++ b/apps/ecommerce/src/app/billing-info/billing-info.component.html
@@ -14,22 +14,26 @@
                     <mat-form-field class="full-width">
                         <mat-label>Name</mat-label>
                         <input matInput placeholder="Name" value="" name="name" ngModel required="true">
+                        <mat-error *ngIf="hasError('name', 'required')">Name is required</mat-error>
                     </mat-form-field>
                     <mat-form-field class="full-width">
                         <mat-label>Email</mat-label>
                         <input matInput placeholder="email@domain.com" value="" name="email" ngModel required="true">
+                        <mat-error *ngIf="hasError('email', 'required')">Email is required</mat-error>
                     </mat-form-field>
                     <mat-form-field class="full-width">
                         <mat-label>Phone</mat-label>
                         <input matInput placeholder="9706123123" value="" name="phone" ngModel required="true">
+                        <mat-error *ngIf="hasError('phoneNumber', 'required')">Phone is required</mat-error>
                     </mat-form-field>
                     <mat-form-field class="full-width">
                         <mat-label>Address</mat-label>
                         <textarea matInput placeholder="Address..." name="address" ngModel required="true"></textarea>
+                        <mat-error *ngIf="hasError('address', 'required')">Address is required</mat-error>
                     </mat-form-field>
                 </form>
                 <mat-card-actions>
-                    <button (click)="submit(myform)" mat-raised-button color="accent">Submit</button>
+                    <button (click)="submit(myform)" mat-raised-button color="accent" [disabled]="!myform.valid">Submit</button>
                 </mat-card-actions>
             </div>
         </mat-card-content>
